@@ -113,7 +113,7 @@ public class ItineraryDay {
             return;
         }
         if (pos_activity == 0) {
-            LocalTime c_start = this.activities.get(0).getStart();
+            LocalTime c_start = this.activities.getFirst().getStart();
             for (int i=1; i<=n-1; i++) {
                 TimeSlot current = this.activities.get(i);
                 Duration duration = Duration.between(current.getStart(), current.getEnd());
@@ -121,7 +121,7 @@ public class ItineraryDay {
                 current.setEnd(c_start.plus(duration));
                 if (i != n-1) c_start = current.getEnd().plus(current.getWayToNext().getEstimatedDuration());
             }
-            this.activities.remove(0);
+            this.activities.removeFirst();
             return;
         }
 
@@ -138,7 +138,6 @@ public class ItineraryDay {
             if (i != n-1) c_start = current.getEnd().plus(current.getWayToNext().getEstimatedDuration());
         }
         this.activities.remove(pos_activity);
-        return;
     }
 
     public void swapPosition (TimeSlot timeslot, int new_position) {
@@ -158,34 +157,8 @@ public class ItineraryDay {
             prev.setWayToNext(transportation);
         }
         if (new_position < cur_position) {
-            if (new_position == 0) {
-                TimeSlot next = this.activities.get(new_position);
-                Transportation transportation2 = Transportation.betweenPlaces(timeslot.getEnd(), timeslot.getData().getLocation(), next.getData().getLocation());
-                timeslot.setWayToNext(transportation2);
-                LocalTime new_start = next.getStart();
-                TimeSlot aux1 = next, aux2;
-                for (int i=new_position+1; i<=cur_position; i++) {
-                    aux2 = this.activities.get(i);
-                    this.activities.set(i, aux1);
-                    aux1 = aux2;
-                }
-                this.activities.set(new_position, timeslot);
-                Duration duration = Duration.between(timeslot.getStart(), timeslot.getEnd());
-                timeslot.setStart(new_start);
-                timeslot.setEnd(new_start.plus(duration));
-                for (int i=1; i<n; i++) {
-                    TimeSlot current = this.activities.get(i);
-                    TimeSlot prev = this.activities.get(i-1);
-                    duration = Duration.between(current.getStart(), current.getEnd());
-                    current.setStart(prev.getEnd().plus(prev.getWayToNext().getEstimatedDuration()));
-                    current.setEnd(current.getStart().plus(duration));
-                }
-                if (cur_position == n-1) {
-                    TimeSlot last = this.activities.getLast();
-                    last.setWayToNext(null);
-                }
-                return;
-            }
+            // OBS: implementar casos especiais new_position = 0
+            // OBS: implementar casos especiais cur_position = n-1
             TimeSlot prev = this.activities.get(new_position-1);
             TimeSlot next = this.activities.get(new_position);
             Transportation transportation1 = Transportation.betweenPlaces(prev.getEnd(), prev.getData().getLocation(), timeslot.getData().getLocation());
@@ -206,40 +179,10 @@ public class ItineraryDay {
                 current.setStart(prev.getEnd().plus(prev.getWayToNext().getEstimatedDuration()));
                 current.setEnd(current.getStart().plus(duration));
             }
-            if (cur_position == n-1) {
-                TimeSlot last = this.activities.getLast();
-                last.setWayToNext(null);
-            }
         }
         else {
-            if (new_position == n-1) {
-                TimeSlot prev = this.activities.getLast();
-                Transportation transportation1 = Transportation.betweenPlaces(prev.getEnd(), prev.getData().getLocation(), timeslot.getData().getLocation());
-                prev.setWayToNext(transportation1);
-                timeslot.setWayToNext(null);
-                TimeSlot aux1 = prev, aux2;
-                for (int i=new_position-1; i>=cur_position; i--) {
-                    aux2 = this.activities.get(i);
-                    this.activities.set(i, aux1);
-                    aux1 = aux2;
-                }
-                this.activities.set(new_position, timeslot);
-                if (cur_position == 0) {
-                    LocalTime new_start = timeslot.getStart();
-                    TimeSlot first = this.activities.getFirst();
-                    Duration duration = Duration.between(first.getStart(), first.getEnd());
-                    first.setStart(new_start);
-                    first.setEnd(new_start.plus(duration));
-                }
-                for (int i=1; i<n; i++) {
-                    TimeSlot current = this.activities.get(i);
-                    prev = this.activities.get(i-1);
-                    Duration duration = Duration.between(current.getStart(), current.getEnd());
-                    current.setStart(prev.getEnd().plus(prev.getWayToNext().getEstimatedDuration()));
-                    current.setEnd(current.getStart().plus(duration));
-                }
-                return;
-            }
+            // OBS: implementar casos especiais new_position = n-1
+            // OBS: implementar casos especiais cur_position = 0
             TimeSlot prev = this.activities.get(new_position);
             TimeSlot next = this.activities.get(new_position+1);
             Transportation transportation1 = Transportation.betweenPlaces(prev.getEnd(), prev.getData().getLocation(), timeslot.getData().getLocation());
@@ -253,13 +196,6 @@ public class ItineraryDay {
                 aux1 = aux2;
             }
             this.activities.set(new_position, timeslot);
-            if (cur_position == 0) {
-                LocalTime new_start = timeslot.getStart();
-                TimeSlot first = this.activities.getFirst();
-                Duration duration = Duration.between(first.getStart(), first.getEnd());
-                first.setStart(new_start);
-                first.setEnd(new_start.plus(duration));
-            }
             for (int i=1; i<n; i++) {
                 TimeSlot current = this.activities.get(i);
                 prev = this.activities.get(i-1);
